--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "John O'Hara",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ssh2": "^1.15.0"
   }
 }
